# worktrunk-wip

./: .pre-commit-config.yaml  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
docs/plans/: 2026-07-15-wt-wip-subcommand.md
src/: config.rs  get.rs  main.rs  pull.rs  push.rs  testutil.rs  types.rs  util.rs
tests/: guard.rs  integration.rs
