[package]
name = "worktrunk-wip"
version = "0.1.0"
edition = "2021"
description = "wt wip — append-only cross-machine WIP sync for worktrunk"
license = "MIT"
repository = "https://github.com/bfirestone/worktrunk-wip"

[[bin]]
name = "wt-wip"
path = "src/main.rs"

[dependencies]
worktrunk = "0.68"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
color-print = "0.3"
gethostname = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
